--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             color: rgb(97, 47, 27);
             /* background-color: rgb(255, 107, 188); 
             padding: 4px 14px;
-            border-radius: 8px;ddd*/
+            border-radius: 8px;*/
             font-size: 34px;
 
         }
@@ -62,7 +62,7 @@
     <h1 class="title">2023</h1>
     <p class="msg">BUCKET SANDWICH</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1 center">책 5권 읽기</div>
+        <div class="bucket img1 center">책 10권 읽기</div>
         <div class="bucket img2 center">운동 4개월 이상 하기</div>
         <div class="bucket img3 center">영어수업(돈내고) 듣기</div>
         <div class="bucket img4 center">그림 인스타 계정 만들기</div>
