--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
         }
 
         .title {
-            color: rgb(97, 47, 27);
+            color: rgb(204, 128, 98);
             /* background-color: rgb(255, 107, 188); 
             padding: 4px 14px;
             border-radius: 8px;*/
-            font-size: 34px;
+            font-size: 60px;
+            font-weight: 800;
+            position: relative;
+            top: -15px;
+           
 
         }
 
@@ -30,27 +34,15 @@
         }
 
         .msg {
-            font-size: 20px;
-            font-weight: 700;
+            font-size: 22px;
+            font-weight: 800;
         }
 
         .bucket {
             width: 120px;
             height: 120px;
         }
-
-        .img1 {
-            background-image: url("https://scontent-ssn1-1.cdninstagram.com/v/t51.2885-15/321204071_719258759418594_5194730351589421351_n.webp?stp=dst-jpg_e35&_nc_ht=scontent-ssn1-1.cdninstagram.com&_nc_cat=106&_nc_ohc=8bUot7MlOfQAX_EHEMP&edm=ACWDqb8BAAAA&ccb=7-5&ig_cache_key=MzAwMDI2MTQ2MjYwMjk4MjA4Mw%3D%3D.2-ccb7-5&oh=00_AfAzE-r4reBPjcji19a2NgMx5McHu3Cl_o5lZJV8JhpNMg&oe=63BB41B3&_nc_sid=1527a3");
-            background-size: cover;
-            background-position: center;
-        }
-
-        .img2 {
-            background-image: url("https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/bucket-lightred.png");
-            background-size: cover;
-            background-position: center;
-        }
-
+        
         .row {
             width: 360px;
         }
@@ -59,17 +51,17 @@
 </head>
 
 <body class="bg center">
-    <h1 class="title">2023</h1>
+    <h1 class="title">⭑2023⭑</h1>
     <p class="msg">BUCKET SANDWICH</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1 center">책 10권 읽기</div>
-        <div class="bucket img2 center">운동 4개월 이상 하기</div>
-        <div class="bucket img3 center">영어수업(돈내고) 듣기</div>
-        <div class="bucket img4 center">그림 인스타 계정 만들기</div>
-        <div class="bucket img5 center">대훈이랑 강릉</div>
-        <div class="bucket img6 center">대훈이랑 전주</div>
-        <div class="bucket img7 center">코딩 아무거나 배워보기</div>
-        <div class="bucket img8 center">대섹백</div>
+        <div class="bucket img1 center">코딩 아무거나 배워보기</div>
+        <div class="bucket img2 center">운동 4개월 유지</div>
+        <div class="bucket img3 center">영어회화 수업듣기</div>
+        <div class="bucket img4 center">책 5권 읽기</div>
+        <div class="bucket img5 center">그림 sns 계정 만들기</div>
+        <div class="bucket img6 center">돈스타브 용파리 잡기</div>
+        <div class="bucket img7 center">토스시험 응시</div>
+        <div class="bucket img8 center">청약통장 만들기</div>
     </div>
 
 </body>
