--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
 
         .title {
-            color: rgb(204, 128, 98);
+            color: rgb(194, 113, 81);
             /* background-color: rgb(255, 107, 188); 
             padding: 4px 14px;
             border-radius: 8px;*/
@@ -54,7 +54,7 @@
     <h1 class="title">⭑2023⭑</h1>
     <p class="msg">BUCKET SANDWICH</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1 center">코딩 아무거나 배워보기</div>
+        <div class="bucket img1 center done">코딩 아무거나 배워보기</div>
         <div class="bucket img2 center">운동 4개월 유지</div>
         <div class="bucket img3 center">영어회화 수업듣기</div>
         <div class="bucket img4 center">책 5권 읽기</div>
