--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1 class="title">⭑2023⭑</h1>
     <p class="msg">BUCKET SANDWICH</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1 center" id="bucket1">코딩 아무거나 배워보기</div>
-        <div class="bucket img1 center done" id="bucket1d">코딩 아무거나 배워보기</div>
+        <div class="bucket img1 center" id="bucket1" data-id="b1">코딩 아무거나 배워보기</div>
+        <div class="bucket img1 center done" id="bucket1d" style="display: none" data-id="b1d">코딩 아무거나 배워보기</div>
         <div class="bucket img2 center">운동 4개월 유지</div>
         <div class="bucket img3 center">영어회화 수업듣기</div>
         <div class="bucket img4 center">책 5권 읽기</div>
@@ -24,8 +24,24 @@
     </div>
 
     <script>
-        document.getElementById('bucket1').style.display = 'none';
-        // document.getElementById('bucket1d').style.display = 'none';
+        document.getElementById("bucket1").onclick = function () { a() };
+        function a() {
+            document.getElementById('bucket1').style.display = 'none';
+            document.getElementById('bucket1d').style.display = 'flex';
+        }
+        document.getElementById("bucket1d").onclick = function () { b() };
+        function b() {
+            document.getElementById('bucket1d').style.display = 'none';
+            document.getElementById('bucket1').style.display = 'flex';
+        }
+
+        // if (location.reload()) {
+        //     function r();
+        // }
+        // function r() {
+        //     document.getElementById('[data-id]').style.display = 'flex';
+        //     // document.getElementById('[data-id]').style.display = 'none';
+        // }
     </script>
 </body>
 </html>
